Fix sidenav opening on mobile view

--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -26,8 +26,8 @@
     z-index: 1;
     top: 1.5rem;
     right: 2rem;
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
     cursor: pointer;
   }
